# multi-modal-tuning-js

./: .gitignore  README.md  README_JS.md  demo.html  example_usage.js  index.html
reference/: .gitignore  README.md  csr_matrix.js  example.js  example_calibrated_optimization.py  example_sapele_xylophone.py  example_xylophone_range.py  index.html  index.js  lil_matrix.js  linalg.js  main.py  package-lock.json  package.json  requirements.txt  setup.py  sparse_linalg.js  test.js  vite.config.ts
reference/.github/workflows/: deploy.yml
reference/multi_modal_tuning/: __init__.py  types.py
reference/multi_modal_tuning/data/: __init__.py  materials.py  presets.py
reference/multi_modal_tuning/optimization/: __init__.py  algorithm.py  crossover.py  mutation.py  objective.py  penalties.py  population.py  selection.py
reference/multi_modal_tuning/physics/: __init__.py  bar_profile.py  fem_3d.py  fem_assembly.py  frequencies.py  timoshenko.py  visualization.py
reference/multi_modal_tuning/utils/: __init__.py  bar_length_finder.py  note_utils.py
reference/output/: summary.txt
reference/reference/wasm-physics/: Cargo.toml
reference/reference/wasm-physics/.cargo/: config.toml
reference/reference/wasm-physics/src/: lib.rs
src/: index.js  types.js
src/data/: materials.js  presets.js
src/optimization/: algorithm.js  crossover.js  index.js  mutation.js  objective.js  penalties.js  population.js  selection.js
src/physics/: barProfile.js  fem3d.js  fem3d.test.js  femAssembly.js  frequencies.js  timoshenko.js
src/utils/: barLengthFinder.js  noteUtils.js
(+51 files in other folders)
