[package]
name = "wasm-physics"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
nalgebra = "0.33"
js-sys = "0.3"
rayon = "1.10"
wasm-bindgen-rayon = "1.2"

[profile.release]
# Optimize for size in release builds
opt-level = 3
lto = true
